--- a/index.html
+++ b/index.html
@@ -1,48 +1,61 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
- <!DOCTYPE html>
- <html lang="en">
- <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=200, initial-scale=1.0">
-    <title>lio portfolio</title>
- </head>
- <body>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Resume</title>
+</head>
+<body>
 
-    <h1> our project we did so far</h1>
-<hr>
-        <section> project 1
-    <a href="./public/birthday-invite.html"> <img src="./assets/images/birthday-invite.png" alt="first project"> </a>
-        </section>
+<h1>
+    Ido Chen
+</h1>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_t8brgDkibQMBgsCLqMHyo5rxg2UO_lLrtw&s" alt="israeli eats humous">
+
+<section id="summary">
+    <p>
+        <h2>summary</h2>
+        a dedicated human being with extencive experience in customer service
+    </p>
+</section>
+
 </hr>
-<hr>
-   <section> projeect 2
-    
-    <a href="./public/movie-ranking.html"> <img src="./assets/images/movie-ranking.png" alt="second project"> </a>
-    </section>
-    
+<section id="education">
+<p>
+    <h2>education</h2>
+    Bachelors degree in businss adminstration
+</p>
+</section>
+
 </hr>
-    <hr></hr>
-    <h4>
-        <a href="./public/about.html"> about our organsition </a>
-    </h4>
-    <hr></hr>
-    <div>
-        <a href="./public/contact.html"> Contact </a>
-    </div>
-    <hr></hr>
- </body>
- </html>
+<section id="professional experience">
+<p>
+    <h2>professional experience</h2>
+   <ol>
+    <li>customer servise</li>
+    <li>real time desk helper</li>
+    <li>fraud investigator</li>
+   </ol>
+</p>
+</section>
+
+</hr>
+<section id="languages">
+<p>
+    <h2>languages</h2>
+    <ul>
+        <li>russian</li>
+        <li>hebrew</li>
+        <li>english</li>
+    </ul>
+</p>
+</section>
+
+<section if="other">
+    <h2>other</h2>
+    <a href="./other.html"> other</a>
+</section>
+
+</body>
+</body>
+</html>
